Update cash audio source to local file

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body{background:#0b0f14;color:#fff;font-family:Inter}
 <audio id="fly" loop preload="auto">
   <source src="avivator.mp3" type="audio/mpeg">
 </audio>
-<audio id="cash" src="https://assets.mixkit.co/active_storage/sfx/2013/2013-preview.mp3"></audio>
+<audio id="cash" src="cashout.mp3"></audio>
 <audio id="crash" src="https://assets.mixkit.co/active_storage/sfx/2747/2747-preview.mp3"></audio>
 
 <script>
