--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@ body{background:#0b0f14;color:#fff;font-family:Inter}
 
 </div>
 
-<audio id="fly" src="https://assets.mixkit.co/active_storage/sfx/2966/2966-preview.mp3"></audio>
-<audio id="cash" src="https://assets.mixkit.co/active_storage/sfx/2013/2013-preview.mp3"></audio>
-<audio id="crash" src="https://assets.mixkit.co/active_storage/sfx/2747/2747-preview.mp3"></audio>
+<audio id="fly" src="avivator.mp3"></audio>
+<audio id="cash" src="cahout.mp3"></audio>
+<audio id="crash" src="crash.mp3"></audio>
 
 <script>
 /* DOM */
